Remove unnecessary gold price classes and enhance gold price services & models
Deleted 3 Gold Price related classes following changes to the process of obtaining and storing gold prices. Changes were brought about due to adjustments in the 3rd party service providing gold prices hence initial approach was deemed redundant.

Enhanced several classes in com.thoroldvix.economatic.goldprice, incorporating data validation annotations and adding or adjusting methods where necessary. The 'GoldPriceProp' class was adjusted to throw an exception if update rate is less than 5 minutes. A new 'GoldPriceUpdateRateException' class was created for handling this particular exception.

Several testing classes were also deleted due matches with the deleted classes mentioned. Changes made increases the robustness of the gold price related modules in the application, making it more reliable with faster exceptions handling process.

Overall, these changes were necessary as they ensure that the program handles the gold prices in a more efficient and stable manner.